concluindo funcionalidades basicas

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,5 +7,6 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
 spring.jpa.hibernate.ddl-auto = create
 spring.jpa.show-sql = true
+spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
 
 socialnetworkpoc.salt=e15aae5d-35da-4427-b175-2ffe9e945374
