adicionando recurso de profile para popular base de dados

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,11 +3,14 @@ spring.datasource.url=jdbc:h2:mem:socialnetwork
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=password
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
+# JPA
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto = create
 spring.jpa.show-sql = true
 spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
 spring.jpa.properties.hibernate.format_sql=true
 
+#Application
 socialnetworkpoc.salt=e15aae5d-35da-4427-b175-2ffe9e945374
+spring.profiles.active=development
