--- a/pom.xml
+++ b/pom.xml
@@ -6,13 +6,13 @@
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>2.2.6.RELEASE</version>
-		<relativePath/> <!-- lookup parent from repository -->
+		<relativePath/>
 	</parent>
 	<groupId>br.com.allanlarangeiras.socialnetwork</groupId>
 	<artifactId>social-network-poc</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>social-network-poc</name>
-	<description>Demo project for Spring Boot</description>
+	<description></description>
 
 	<properties>
 		<java.version>1.8</java.version>
@@ -31,10 +31,6 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
-<!--		<dependency>-->
-<!--			<groupId>org.springframework.boot</groupId>-->
-<!--			<artifactId>spring-boot-starter-security</artifactId>-->
-<!--		</dependency>-->
 
 		<dependency>
 			<groupId>com.google.code.gson</groupId>
