adicionando swagger e configuration properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,5 +12,7 @@ spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
 spring.jpa.properties.hibernate.format_sql=true
 
 #Application
-socialnetworkpoc.salt=e15aae5d-35da-4427-b175-2ffe9e945374
+social-network-poc.salt=e15aae5d-35da-4427-b175-2ffe9e945374
+
+#Others
 spring.profiles.active=development
