--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,9 @@
 spring.datasource.url=jdbc:h2:mem:socialnetwork
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
-spring.datasource.password=password
+spring.datasource.password=
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2
 
 # JPA
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
