--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,3 +18,5 @@ social-network-poc.salt=e15aae5d-35da-4427-b175-2ffe9e945374
 
 #Others
 spring.profiles.active=development
+
+management.endpoints.web.exposure.include=info,metrics,loggers
